--- a/views/partials/Log_Reg-header.ejs
+++ b/views/partials/Log_Reg-header.ejs
@@ -7,7 +7,7 @@
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.0.1">
     <title>xStatus</title>
-    <link rel="shortcut icon" href="xStatus Favicon.png">
+    <link rel="shortcut icon" href="/xS_Favicon.png">
 
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sign-in/">
