Add comment system. And post count system in for each discussion in

--- a/public/CSS/postpage_style.css
+++ b/public/CSS/postpage_style.css
@@ -226,6 +226,11 @@ a[data-toggle="collapse"] {
     background: #212529;
     color: white;
 }
+.commentBtn{
+    font-size: 15px;
+    padding: 7px 10px;
+    background-color: #272b30;
+}
 
 
 
