--- a/views/postpage.ejs
+++ b/views/postpage.ejs
@@ -68,10 +68,19 @@
                 <!-- Comment Input -->
                 <div class="group">
                     <form action="/add_comment" method="POST">  
-                        <input type="text" required>
+                        <input 
+                        type="text" 
+                        class="comment_input" 
+                        name="comment_input"  
+                        required> 
+                        <!--AFTER ADDING THIS FEATURE MY CODE BECAME SLOW-->
+                        
                         <span class="highlight"></span>
                         <span class="bar"></span>
                         <label>Add a comment..</label>
+                        <!-- <button class="myBtn postBtn commentBtn" type="submit" name="commentBtn" value="<%= allPost[i].id %>">Comment</button> -->
+                        <input type="hidden" name="hiddenInp_discussionName" value="<%= DiscussionTitle %>">
+                        <input type="hidden" name="hiddenInp_commentsID" value="<%= allPost[i].id %>">
                     </form>
                 </div>
 
@@ -86,13 +95,14 @@
                 </form> -->
 
   
-
+                <% for(let j = 0; j < allPost[i].Comments.length; j++) { %>
                 <div class="comments">
-                    <h5><img src="/avatar3.png" alt="Avatar" class="smallAvater">Blond Bitch</h5>
-                    <p>Random comment.</p>
+                    <h5><img src="/avatar3.png" alt="Avatar" class="smallAvater"><%= allPost[i].Comments[j].commenter %> </h5>
+                    <p><%= allPost[i].Comments[j].comment %> </p>
                     <a href="" class="Like_Comment_Btn_sm"><i class="far fa-thumbs-up"></i> 8</a>
                     <!-- <a href="" class="Like_Comment_Btn_sm"><i class="far fa-comment"></i> Reply</a> -->
                 </div>
+                <% } %>
             </div>
             <div class="line"></div>
             <% } %>
@@ -125,12 +135,12 @@
         });
         
         // Enter to submit textarea. 
-        // $("#post_textarea").keypress(function (e) {
-        //     if(e.which == 13 && !e.shiftKey) {        
-        //         $(this).closest("form").submit();
-        //         e.preventDefault();
-        //     }
-        // });
+        $(".comment_input").keypress(function (e) {
+            if(e.which == 13 && !e.shiftKey) {        
+                $(this).closest("form").submit();
+                e.preventDefault();
+            }
+        });
 
         // Cleat textarea when Cancel clicked
         function ClearTextarea() {
