--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
           <i class="fas fa-user-circle"></i>
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#"> <%=name%></a>
+            <a class="dropdown-item" href="#"> </a>
             <a class="dropdown-item" href="/logout">Log Out</a>
         </div>
     </div>
@@ -142,11 +142,3 @@
     
 </body>
 </html>
-
-
-
-
-
-
-<!-- <h1>Hello <%=name%> </h1> -->
-<!-- <a href="/logout" role="button">Log Out</a> -->
