--- a/views/partials/HEADER.ejs
+++ b/views/partials/HEADER.ejs
@@ -52,7 +52,7 @@
             <img src="/avatar5.png" alt="Avatar" class="dropdown-toggle profileAvater"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Con D. Oriano</a>
+              <a class="dropdown-item" href="#"><%= myProfileName %> </a>
               <a class="dropdown-item" href="#">Profile</a>
               <a class="dropdown-item" href="#">Settings</a>
               <a class="dropdown-item" href="#">Logout</a>
