--- a/views/home.ejs
+++ b/views/home.ejs
@@ -112,9 +112,9 @@
 
 
       <div class="col-lg-2 col-md-4 col-sm-6 myCARD">
-        <button type="button" class="btn btn-dark myBtn postBtn plusBtn" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">
-          <!-- <i class="fas fa-plus fa-8x"></i> -->
-          +
+        <button type="button" class="btn btn-dark postBtn plusBtn" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">
+          <i class="fas fa-plus fa-8x plusIcon"></i>
+          <!-- + -->
         </button>
       </div>
     </div>
