--- a/views/postpage.ejs
+++ b/views/postpage.ejs
@@ -8,7 +8,7 @@
         <!-- Sidebar  -->
         <div id="sidebar">
             <div class="sidebar-header">
-                <h3>Activity</h3>
+                <h3>Notifications</h3>
             </div>
 
             <% for(let i = (allNotification.length - 1); i >= 0; i--) { %>
