Add Adorable Avatar feature

--- a/views/partials/HEADER.ejs
+++ b/views/partials/HEADER.ejs
@@ -53,7 +53,7 @@
         
 
         <div class="btn-group dropleft profileDropdown">
-            <img src="https://api.adorable.io/avatars/280/abott@adorable.png" alt="Avatar" class="dropdown-toggle profileAvater"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <img src="http://api.adorable.io/avatar/200/<%= myProfileName %> " alt="Avatar" class="dropdown-toggle profileAvater"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="profileName" onclick="location.href='/'"><%= myProfileName %> </span>
 
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
